force-app/main/default/objects/Meeting_Speaker__c/Meeting_Speaker__c.object-meta.xml
<CustomObject>
    <label>Meeting Speaker</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Meeting Speaker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>