force-app/main/default/objects/Meeting_Speaker__c/fields/Payee_Profile__c.field-meta.xml
<CustomField>
    <fullName>Payee_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Profile</label>
    <referenceTo>Payee_Profile__c</referenceTo>
    <relationshipLabel>Meeting Speakers</relationshipLabel>
    <relationshipName>Meeting_Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>