force-app/main/default/objects/Meeting_Speaker__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting Speakers</relationshipLabel>
    <relationshipName>Meeting_Speakers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>